--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .idea
 cmd/server/server
+cmd/server/wire_gen.go
+internal/infra/graph/generated.go
+internal/infra/graph/schema.resolvers.go
+internal/infra/graph/model/models_gen.go
 
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
