--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ cmd/server/server
 cmd/server/wire_gen.go
 internal/infra/graph/generated.go
 internal/infra/graph/model/models_gen.go
+internal/infra/grpc/pb/*
 
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
