feat(sqlc): Automatic type safe Go code from SQL

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ cmd/server/wire_gen.go
 internal/infra/graph/generated.go
 internal/infra/graph/model/models_gen.go
 internal/infra/grpc/pb/*
+internal/infra/database/psql/*.go
 
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
