--- a/configs/local.template.env
+++ b/configs/local.template.env
@@ -4,6 +4,7 @@ DB_PORT=5432
 DB_USER=root
 DB_PASSWORD=root
 DB_NAME=orders
+RABBITMQ_HOST=localhost
 WEB_SERVER_PORT=:8000
 GRPC_SERVER_PORT=50051
 GRAPHQL_SERVER_PORT=8080
