build: Remove make command related to database migration

--- a/configs/local.template.env
+++ b/configs/local.template.env
@@ -4,7 +4,7 @@ DB_PORT=5432
 DB_USER=root
 DB_PASSWORD=root
 DB_NAME=orders
-DB_MIGRATION_PATH=internal/infra/database/psql/migrations
+DB_MIGRATION_PATH=../../internal/infra/database/psql/migrations
 RABBITMQ_HOST=localhost
 WEB_SERVER_PORT=:8000
 GRPC_SERVER_PORT=50051
